apps/users/client/k8s/base/configMap.yml
apiVersion: v1
kind: Namespace
metadata:
  #  labels:
  #    kubernetes.io/metadata.name: aris
  name: users
---
apiVersion: v1
kind: Namespace
metadata:
  #  labels:
  #    kubernetes.io/metadata.name: aris
  name: aris
