apps/users/client/k8s/base/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-client
  labels:
    app: users-client
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      name: users-client
      labels:
        app: users-client
        version: v1
    spec:
      serviceAccountName: users-client
      containers:
        - name: users-client
          image: yurikrupnik/users-client:latest
          ports:
            - containerPort: 80
              name: http
          #          image: europe-west1-docker.pkg.dev/maya-mussia/nx-go-playground/users-client:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
#            - mountPath: /etc/nginx/conf.d
            - mountPath: /etc/nginx/templates
              name: nginx-config
          env: # not working only front end
            - name: UPSTREAM_HOST
              valueFrom:
                configMapKeyRef:
                  key: upstream_host
                  name: proxy-envs
            - name: UPSTREAM_PORT
              valueFrom:
                configMapKeyRef:
                  key: upstream_port
                  name: proxy-envs
            - name: UPSTREAM_NAME
              valueFrom:
                configMapKeyRef:
                  key: upstream_name
                  name: proxy-envs
      volumes:
#        - name: nginx-config
#          configMap:
#            name: nginx-config
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: proxy-envs
          configMap:
            name: proxy-envs
      #        - name: haproxy-config
      #          configMap:
      #            name: haproxy-config

      restartPolicy: Always
  selector:
    matchLabels:
      app: users-client
      version: v1
