apps/users/client/k8s/base/patch.yaml
apiVersion: apps/v1
kind: Deployment
#metadata:
#  name: users-client
spec:
  selector:
    matchLabels:
      app: users-client
  template:
    #    metadata:
    #      labels:
    #        app: users-client
    spec:
      containers:
        - name: users-client
#          image: gcr.io/google-containers/busybox
#          resources:
#            requests:
#              memory: "32Mi"
#              cpu: "100m"
#            limits:
#              memory: "128Mi"
#              cpu: "500m"
#          ports:
#            - containerPort: 8080
