apps/users/client/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: users-client-service
  labels:
    run: users-client-service
    custom: my-custom-label-service-value
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: users-client
